log
vi., 13 de may. de 2022 16:52:50: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
f9615d1
vi., 13 de may. de 2022 17:12:13: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:11: error: unused variable 'j' [-Werror=unused-variable]
    int i, j;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
2d4b3de
